@@ -250,6 +250,8 @@ BUGFIXES:
   ZOOKEEPER-689.  release build broken - ivysettings.xml not copied during
   "package" (phunt via mahadev)
 
+  ZOOKEEPER-59. Synchronized block in NIOServerCnxn (flavio via mahadev) 
+
 IMPROVEMENTS:
   ZOOKEEPER-473. cleanup junit tests to eliminate false positives due to
   "socket reuse" and failure to close client (phunt via mahadev)
